# diesel-enums

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  cliff.toml  justfile
.github/workflows/: release.yml
prelude/: Cargo.toml
prelude/src/: lib.rs  test_runners.rs
prelude/src/test_runners/: postgres.rs  sqlite.rs
prelude/tests/: readme_example.rs
proc-macro/: Cargo.toml
proc-macro/docs/: common_attrs.md
proc-macro/src/: attributes.rs  conversions.rs  lib.rs  main_logic.rs  pg_enum.rs  process_variants.rs  test_generation.rs
test-pg/: Cargo.toml  diesel.toml
test-pg/migrations/2025-10-23-082231-0000_init/: down.sql  up.sql
test-pg/src/: lib.rs
test-pg/src/tests/: models.rs  pg_example.rs  pg_tests.rs  schema.rs
test-sqlite/: Cargo.toml  diesel.toml  poke-db.sqlite3
test-sqlite/migrations/2025-07-12-193425_init/: up.sql
test-sqlite/src/: lib.rs
test-sqlite/src/tests/: models.rs  schema.rs  sqlite_example.rs  sqlite_tests.rs
