[package]
name = "diesel-enums-proc-macro"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

description = "proc-macro library behind the diesel-enums crate."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
diesel-enums = { path = "../prelude/", features = [
  "pg-async-runner",
  "sqlite-async-runner",
] }
diesel = "2.3"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = "0.11"
syn-utils = "0.5"
bool-enum = "0.1"

[lib]
proc-macro = true

[lints]
workspace = true

[features]
default-sqlite-runner = []
default-pg-runner = []
crate-runner = []
async-crate-runner = []
